fix text align

--- a/css/magic-v1.css
+++ b/css/magic-v1.css
@@ -21546,6 +21546,10 @@ body .rtl .items li .go::after{
   display:none!important
 }
 
+.txtC{
+  text-align: center;
+}
+
 .transparent{
   border-color:transparent!important;
   background-color: transparent!important;
